--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -284,3 +284,26 @@ task printProperties{
 //     runtime 'org.slf4j:slf4j-simple:1.7.10'
 // }
 
+
+
+
+
+
+
+
+
+
+allprojects{
+	afterEvaluate{
+		  println "allprojects = $it.name"
+	}
+}
+
+gradle.afterProject {
+	project,projectState->
+	if (projectState.failure) {
+		println "evalution of $project Failed"
+	}else{
+		println "evalution of $project succeeded"
+	}
+}
