--- a/gradle/settings.gradle
+++ b/gradle/settings.gradle
@@ -14,6 +14,9 @@ include 'shared'
 include 'api'
 include 'services:webservice'
 */
-
+println "this is executed during the initialization phase"
 rootProject.name = 'gradle'
-include ':script',':script2'
+//可以通过 :xxx:xxx  设置子项目
+include ':script',':script2','project1','project2',':project3:child'
+//includeFlat 将目录作为参数  使用于 水平布局 
+// includeFlat 'ppp'
