--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Android峰会.zip
+﻿Android峰会.zip
 Android开发艺术探索.pdf
 Android软件安全与逆向分析.pdf
 _改善既有代码的设计[高清版].pdf
@@ -10,4 +10,4 @@ view/1.4Canvas对绘制的辅助/1-4Canvas对绘制的辅助.md
 深入理解Android 卷2（邓凡平）.pdf
 深入理解Android卷1（邓凡平）.pdf
 阿里巴巴Java开发手册.pdf
-改善既有代码的设计[高清版].pdf
+改善既有代码的设计.pdf
