--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿Android峰会.zip
+Android峰会.zip
 Android开发艺术探索.pdf
 Android软件安全与逆向分析.pdf
 _改善既有代码的设计[高清版].pdf
@@ -8,3 +8,5 @@ _改善既有代码的设计[高清版].pdf
 阿里巴巴Java开发手册.pdf
 改善既有代码的设计.pdf
 Android源码设计模式解析与实战.pdf
+Java核心技术卷1.pdf
+Java核心技术  卷1  基础知识  原书第10版--中文版扫描--带书签已OCR (1).rar
