--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Android峰会.zip
+﻿Android峰会.zip
 Android开发艺术探索.pdf
 Android软件安全与逆向分析.pdf
 _改善既有代码的设计[高清版].pdf
@@ -10,7 +10,5 @@ _改善既有代码的设计[高清版].pdf
 Android源码设计模式解析与实战.pdf
 Java核心技术卷1.pdf
 Java核心技术  卷1  基础知识  原书第10版--中文版扫描--带书签已OCR (1).rar
-Gradle学习/gradle项目/.gradle/4.8.1/fileChanges/last-build.bin
-Gradle学习/gradle项目/.gradle/buildOutputCleanup/buildOutputCleanup.lock
 Gradle学习/gradle项目/
 Gradle学习/gradle_project/
