--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Gradle学习/gradle项目/
 Gradle学习/gradle_project/
 深入理解Android 卷1（邓凡平）.pdf
 深入理解Android 卷3（邓凡平).pdf
+深入理解ANDROID 卷3@www.java1234.com.pdf
