--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ Gradle学习/gradle_project/
 深入理解Android 卷1（邓凡平）.pdf
 深入理解Android 卷3（邓凡平).pdf
 深入理解ANDROID 卷3@www.java1234.com.pdf
+Android群英传：神兵利器.pdf
+Android软件安全与逆向分析 (1).pdf
+kotlin-for-android-developers-zh.pdf
+kotlin学习路线(个人感悟).pdf
+啊哈！算法.pdf
+毕向东Java基础课堂笔记.pdf
