--- a/Gradle学习/Sample/settings.gradle
+++ b/Gradle学习/Sample/settings.gradle
@@ -8,3 +8,15 @@
  */
 
 rootProject.name = 'Sample'
+gradle.beforeProject{
+	project->
+	println "beforeProject"
+}
+
+gradle.taskGraph.whenReady {
+	println "whenReady"
+}
+
+gradle.buildFinished{
+	println "buildFinished"
+}
