--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ kotlin-for-android-developers-zh.pdf
 kotlin学习路线(个人感悟).pdf
 啊哈！算法.pdf
 毕向东Java基础课堂笔记.pdf
+Gradle学习/Sample/buildSrc/build/
+Gradle学习/Sample/buildSrc/.gradle/
