--- a/Gradle学习/Sample/build.gradle
+++ b/Gradle学习/Sample/build.gradle
@@ -34,3 +34,11 @@ configurations{
 }
  
 println "mydep class = "+ configurations.myDep.class
+
+
+task hello {
+
+	doLast{
+		println 'Hello Gradle!'
+	}
+}
