--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ kotlin学习路线(个人感悟).pdf
 毕向东Java基础课堂笔记.pdf
 Gradle学习/Sample/buildSrc/build/
 Gradle学习/Sample/buildSrc/.gradle/
+Groovy学习/Sample/*.groovy
+Groovy学习/Sample/Sample.groovy
+Groovy学习/Sample/*.groovy
